discussion/kv_engine/172036/172036_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-35297: Make both seqno/id scans increment failover counter

Currently only the by-id scan code will update the failover counter
for a hard failure from couchstore, change this so that by-seq also
does the same.

Change-Id: I701522394175adedd8f5cffd353733b4dabe02d8

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2022-03-10 11:12:37.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2022-03-10 11:31:09.000000000
Message: 
Patch Set 1: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-03-10 11:34:03.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15970/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29: error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED" [clang-diagnostic-error]
    } else if (errorCode == COUCHSTORE_ERROR_SCAN_CANCELLED) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2418:29: error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED" [clang-diagnostic-error]
    } else if (errorCode == COUCHSTORE_ERROR_SCAN_CANCELLED) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2843:20: error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED" [clang-diagnostic-error]
            return COUCHSTORE_ERROR_SCAN_CANCELLED;
                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2901:16: error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED" [clang-diagnostic-error]
        return COUCHSTORE_ERROR_SCAN_CANCELLED;
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15970/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15970/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44406/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc(2353): error C2065: "COUCHSTORE_ERROR_SCAN_CANCELLED": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/44406/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37385/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37385/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5625/ : FAILURE

Compile error at [2022-03-10T11:23:05.727Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/5625/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18769/ : FAILURE

Compile error at [2022-03-10T11:25:13.511Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18769/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17737/ : FAILURE

Compile error at [2022-03-10T11:25:39.718Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: ?COUCHSTORE_ERROR_SCAN_CANCELLED? was not declared in this scope; did you mean ?COUCHSTORE_ERROR_SCAN_ABORTED??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17737/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18063/ : FAILURE

Compile error at [2022-03-10T11:25:37.293Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: ?COUCHSTORE_ERROR_SCAN_CANCELLED? was not declared in this scope; did you mean ?COUCHSTORE_ERROR_SCAN_ABORTED??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18063/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5684/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26143/ : FAILURE

Compile error at [2022-03-10T11:26:39.567Z] /home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26143/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16807/ : FAILURE

Compile error at [2022-03-10T11:15:30.432Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/kvstore/couch-kvstore/couch-kvstore.cc:2353:29:
error: use of undeclared identifier "COUCHSTORE_ERROR_SCAN_CANCELLED"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16807/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14869/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
